tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__mayalias_3.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/mayalias-3.c" (c, x86_64-unknown-linux-gnu)
global __const.f.s : rec_test = {1} [cir_private, default, dso_local, constant]
global p : rec_test* = #cir.ptr<null> [external, default, align 8, dso_local]

fn g(%arg0: s32i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %18 = alloca s32i*, "a", align 8
        %19 = alloca s32i, "__retval", align 4
        store %arg0, %18
        %20 = load %18 : s32i*, align 8
        %21 = cast(bitcast) %20 : rec_test*
        %22 = get_global @p : rec_test**
        store %21, %22, align 8
        %23 = load %19 : s32i
        return %23
}
fn f() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %8 = alloca s32i, "__retval", align 4
    %9 = alloca s32i, "a", align 4
    %10 = alloca rec_test, "s", align 2
    %11 = call @g(%9) : s32i [all]
    %12 = const 10 : s32i
    store %12, %9, align 4
    %13 = get_global @__const.f.s : rec_test*
    copy %10, %13
    %14 = get_global @p : rec_test**
    %15 = load %14 : rec_test*, align 8
    copy %15, %10
    %16 = load %9 : s32i, align 4
    store %16, %8
    %17 = load %8 : s32i
    return %17
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = get_global @f : (() -> s32i)*
        %5 = call @f() : s32i [all]
        %6 = const 10 : s32i
        %7 = cmp eq %5, %6 : bool
        if %7 {
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
